# MACR

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: experiments.md  overview.md
experiments/quixbugs/: analyze_traces.py  common.py  run_ablation.py  run_baseline.py  run_macr.py  run_single.py
papers/mid-term/: .gitignore  AGENTS.md  Makefile  README.md  generate_midterm_docx.py  metadata.yaml  paper.md  references.bib  report.md  report_metadata.yaml  硕士研究生论文中期考核报告_MACR.docx
papers/mid-term/figures/: __init__.py  figure_ablation.py  figure_architecture.py  figure_tikz_example.py  generate_all.py  report_failure_heatmap.py  report_results.py  report_timeline.py  report_tokens.py  tikz_network.py
papers/mid-term/filters/: include.lua  table-report.lua  table.lua
papers/mid-term/scripts/: build.py
papers/mid-term/sections/: abstract.md  acknowledgments.md  conclusion.md  experiments.md  introduction.md  methodology.md  related_work.md  report_introduction.md  report_methodology.md  report_plan.md  report_progress.md  report_publication.md
reports/: stage_report_2026_06_25.md
slides/: README.md
slides/slides-2026-6-25/: MACR_中期答辩_2026_06_25.pptx  generate_ppt.py
src/macr/: config.py
src/macr/agents/: coordinator.py  protocol.py  subagent.py  subagent_loader.py
src/macr/datasets/: base.py  quixbugs.py
src/macr/evaluation/: metrics.py  runner.py
src/macr/knowledge_graph/: builder.py  entities.py  query.py
src/macr/llm/: base.py  openai_backend.py
src/macr/repair/: patch.py  pipeline.py
src/macr/tools/: base.py  direct_patch.py  query_kg.py  run_tests.py  subagent.py
src/macr/tracing/: __init__.py  base.py  jsonl_store.py  models.py  sqlite_store.py  (+1 more)
tests/: test_agents.py  test_knowledge_graph.py  test_llm.py  test_quixbugs.py  test_repair.py  test_tracing.py
(+12 files in other folders)
