[project]
name = "macr"
version = "0.1.0"
description = "Multi-Agent Collaborative Repair framework for automated program repair"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MACR Contributors" },
]
keywords = ["automated-program-repair", "multi-agent", "knowledge-graph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.0",
    "pytest>=8.0.0",
    "python-pptx>=1.0.2",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["data", ".*", "dist", "build", "node_modules"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["networkx.*", "tree_sitter.*", "tree_sitter_python.*", "tree_sitter_java.*", "yaml.*"]
ignore_missing_imports = true
